--- a/x11-toolkits/wxgtk30/Makefile
+++ b/x11-toolkits/wxgtk30/Makefile
@@ -1,7 +1,7 @@
 PORTNAME=	wx
 DISTVERSIONPREFIX=	v
 DISTVERSION=	3.0.5.1
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	x11-toolkits
 MASTER_SITES=	https://github.com/wxWidgets/wxWidgets/releases/download/v${DISTVERSION}/
 PKGNAMESUFFIX=	${_SHORT_WX_VER}-${FLAVOR}
@@ -11,7 +11,7 @@ MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	The wxWidgets GUI toolkit with GTK bindings
 WWW=		https://www.wxwidgets.org/
 
-LICENSE=	gpl2
+LICENSE=	gpl2+
 LICENSE_FILE=	${WRKSRC}/docs/gpl.txt
 
 LIB_DEPENDS=	libexpat.so:textproc/expat2 \
@@ -47,7 +47,7 @@ CONFIGURE_ARGS=	--with-libpng=sys \
 		--enable-graphics_ctx \
 		--enable-compat26 \
 		--enable-compat28
-CONFIGURE_TARGET=	${ARCH}-portbld-freebsd11.4
+CONFIGURE_TARGET=	${ARCH}-portbld-freebsd13.4
 CONFIGURE_ENV=	X11BASE="${LOCALBASE}" \
 		ac_cv_header_sys_inotify_h=no
 
