--- a/deskutils/kf6-kstatusnotifieritem/Makefile
+++ b/deskutils/kf6-kstatusnotifieritem/Makefile
@@ -5,11 +5,13 @@ CATEGORIES=	deskutils kde kde-frameworks
 COMMENT=	Implementation of Status Notifier Items
 MAINTAINER=	ports@MidnightBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz xorg
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz xorg
 USE_GL=		gl opengl
 USE_KDE=	windowsystem \
 		ecm:build
 USE_QT=		base
 USE_XORG=	x11
+
+CMAKE_OFF=	BUILD_PYTHON_BINDINGS
 
 .include <bsd.port.mk>
