--- a/graphics/kf6-kplotting/Makefile
+++ b/graphics/kf6-kplotting/Makefile
@@ -5,7 +5,7 @@ CATEGORIES=	graphics kde kde-frameworks
 COMMENT=	Provides a virtual base class for easy data-plotting
 MAINTAINER=	kde@FreeBSD.org
 
-USES=		cmake gl kde:6 qt:6 tar:xz
+USES=		cmake gl kde:6 kfhack qt:6 tar:xz
 USE_GL=		gl opengl
 USE_KDE=	ecm:build
 USE_QT=		base tools
