net-mgmt/networkmanager-shim: test off

--- a/net-mgmt/networkmanager-shim/Makefile
+++ b/net-mgmt/networkmanager-shim/Makefile
@@ -24,6 +24,8 @@ GL_SITE=	https://gitlab.freedesktop.org
 GL_ACCOUNT=	NetworkManager
 GL_PROJECT=	NetworkManager
 
+NO_TEST=	yes
+
 MESON_ARGS=	-Dconcheck=false \
 		-Dcrypto=null \
 		-Ddbus_conf_dir=disabled \
