--- a/deskutils/systempreferences/Makefile
+++ b/deskutils/systempreferences/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	systempreferences
 PORTVERSION=	1.2.0
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	deskutils gnustep
 MASTER_SITES=	GNUSTEP/usr-apps
 DISTNAME=	SystemPreferences-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	System Preferences application for GNUstep
+WWW=		https://www.gnustep.org/experience/systempreferences.html
 
 LICENSE=	gpl2
 
