someone saved this so move it to github

--- a/deskutils/gnustep-notebook/Makefile
+++ b/deskutils/gnustep-notebook/Makefile
@@ -1,25 +1,23 @@
-# New ports collection makefile for:    notebook
-# Date created:         3 Dec 2007
-# Whom:                 luke@midnightbsd.org
-#
-
-#
-
 PORTNAME=	notebook
 PORTVERSION=	0.3
 PORTREVISION=	3
 CATEGORIES=	deskutils gnustep
-MASTER_SITES=	http://notebook.cowgar.com/NoteBook/releases/ \
-		http://io.debian.net/~tar/debian/notebook/
 PKGNAMEPREFIX=	gnustep-
-DISTNAME=	NoteBook-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Place to store notes in an organized manner
+WWW=		https://github.com/pcardona34/gnustep-notebook
 
 LICENSE=	gpl2
 
 USES=		gnustep
 USE_GNUSTEP=	back build
+
+USE_GITHUB=	yes
+GH_ACCOUNT=     pcardona34
+GH_PROJECT=     gnustep-notebook
+GH_TAGNAME=		9488a9d
+
+WRKSRC_SUBDIR=		NoteBook-0.3
 
 .include <bsd.port.mk>
