graphics/camera: moved to github

--- a/graphics/camera/Makefile
+++ b/graphics/camera/Makefile
@@ -1,11 +1,7 @@
-# Created by: gurkan@phys.ethz.ch
-
 PORTNAME=	camera
 PORTVERSION=	0.8
-PORTREVISION=	2
+PORTREVISION=	3
 CATEGORIES=	graphics gnustep
-MASTER_SITES=	ftp://ftp.midnightbsd.org/pub/MidnightBSD/mports/distfiles/
-DISTNAME=	Camera-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	GNUstep application for digital still cameras
@@ -19,7 +15,10 @@ LIB_DEPENDS=	libgphoto2_port.so:graphics/libgphoto2
 USES=		tar:bzip2 gnustep
 USE_GNUSTEP=	back build
 
-WRKSRC=		${WRKDIR}/Camera
+USE_GITHUB=	yes
+GH_ACCOUNT=	gsimageapps
+GH_PROJECT=	Camera
+GH_TAGNAME=	37ac903daf716e2dedc2dc7a44f15ad90137eb49
 
 post-patch:
 	${REINPLACE_CMD} 's|^GNUSTEP_INSTALLATION_DIR|#GNUSTEP_INSTALLATION_DIR|' \
