--- a/math/edenmath/Makefile
+++ b/math/edenmath/Makefile
@@ -1,14 +1,13 @@
-
-
 PORTNAME=	edenmath
 PORTVERSION=	1.1.1
-PORTREVISION=	3
+PORTREVISION=	4
 CATEGORIES=	math gnustep
 MASTER_SITES=	http://www.eskimo.com/~pburns/EdenMath/files/
 DISTNAME=	EdenMath_GNUstep-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
-COMMENT=	Scientific calcultor for GNUstep
+COMMENT=	Scientific calculator for GNUstep
+WWW=		https://www.eskimo.com/~pburns/EdenMath/
 
 LICENSE=	gpl2
 
