x11/nvidia-driver-390: migrate distinfo

--- a/x11/nvidia-driver-390/Makefile
+++ b/x11/nvidia-driver-390/Makefile
@@ -5,4 +5,6 @@ PORTREVISION=	0
 MASTERDIR=	${.CURDIR}/../nvidia-driver
 PKGNAMESUFFIX=	-390
 
+DISTINFO_FILE=	${.CURDIR}/distinfo
+
 .include "${MASTERDIR}/Makefile"
