--- a/audio/alsa-lib/Makefile
+++ b/audio/alsa-lib/Makefile
@@ -1,12 +1,7 @@
 PORTNAME=	alsa-lib
-PORTVERSION=	1.2.3
-DISTVERSIONPREFIX=	v
+PORTVERSION=	1.2.13
 CATEGORIES=	audio
-MASTER_SITES=	GH
-
-USE_GITHUB=	yes
-GH_ACCOUNT=	alsa-project
-GH_PROJECT=	${PORTNAME}
+MASTER_SITES=	https://www.alsa-project.org/files/pub/lib/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	ALSA compatibility library
@@ -14,21 +9,25 @@ WWW=		https://www.alsa-project.org/
 
 LICENSE=	lgpl2.1
 
-USES=		autoreconf cpe libtool:keepla tar:bzip2
+USES=		cpe gmake libtool:keepla tar:bzip2
 CPE_VENDOR=	alsa-project
 CPE_PRODUCT=	alsa
 USE_LDCONFIG=	yes
 GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-pkgconfdir="\$${prefix}/libdata/pkgconfig"
 CONFIGURE_ENV=	ac_cv_header_endian_h=no
+CONFIGURE_TARGET=	${ARCH}-portbld-freebsd13.4
 INSTALL_TARGET=	install-strip
 NO_TEST=	yes
 CPPFLAGS+=	-I${FILESDIR}
-CFLAGS+=	-Wno-unknown-attributes -Wno-macro-redefined
+# Some symbols in the linker version script Versions.in are only defined when
+# --enable-alisp is used at configure time. Suppress errors with lld >= 17 due
+# to these undefined symbols.
+CFLAGS+=       -Wno-unknown-attributes -Wno-macro-redefined
 LDFLAGS+=	-Wl,--undefined-version
 
-OPTIONS_DEFINE=		PYTHON
-OPTIONS_SUB=		yes
+OPTIONS_DEFINE=	PYTHON
+OPTIONS_SUB=	yes
 
 PYTHON_USES=			gettext-runtime python
 PYTHON_CONFIGURE_ENABLE=	mixer-pymods python
