--- a/java/Makefile
+++ b/java/Makefile
@@ -55,7 +55,10 @@ SUBDIR += openjdk8-bin
 SUBDIR += openjdk8-jre
 SUBDIR += openjdk11-bin
 SUBDIR += openjdk13-bin
+SUBDIR += openjdk17
 SUBDIR += openjdk17-bin
+SUBDIR += openjdk17-jre
+SUBDIR += openjdk18
 SUBDIR += openjdk18-bin
 SUBDIR += openjfx14
 SUBDIR += phpeclipse
