--- a/java/Makefile
+++ b/java/Makefile
@@ -53,13 +53,16 @@ SUBDIR += netty
 SUBDIR += openjdk8
 SUBDIR += openjdk8-bin
 SUBDIR += openjdk8-jre
+SUBDIR += openjdk11
 SUBDIR += openjdk11-bin
+SUBDIR += openjdk11-jre
 SUBDIR += openjdk13-bin
 SUBDIR += openjdk17
 SUBDIR += openjdk17-bin
 SUBDIR += openjdk17-jre
 SUBDIR += openjdk18
 SUBDIR += openjdk18-bin
+SUBDIR += openjdk19
 SUBDIR += openjfx14
 SUBDIR += phpeclipse
 SUBDIR += proguard
