--- a/java/openjdk17/Makefile
+++ b/java/openjdk17/Makefile
@@ -37,7 +37,9 @@ GH_PROJECT=	jdk17u
 
 NO_CCACHE=	yes
 
-_MAKE_JOBS=	#
+# Suppress passing -j to do-build target via Mk/bsd.port.mk
+# In the JDK build the number of parallel jobs is passed in via configure --with-num-cores=N
+_MAKE_JOBS=
 MAKE_ENV=	LANG="C" \
 		LC_ALL="C" \
 		CLASSPATH="" \
@@ -46,6 +48,7 @@ MAKE_ENV=	LANG="C" \
 		CC=${CC} \
 		CXX=${CXX} \
 		CPP=${CPP} \
+		LOG=cmdlines \
 		MAKEFLAGS=""
 
 JDK_OSARCH=	bsd-${ARCH:S/amd64/x86_64/:S/i386/x86/:S/powerpc64/ppc64/}
@@ -61,8 +64,8 @@ NOPRECIOUSMAKEVARS=	yes
 
 JDK_MAJOR_VERSION=	17
 JDK_MINOR_VERSION=	0
-JDK_PATCH_VERSION=	15
-JDK_BUILD_NUMBER=	6
+JDK_PATCH_VERSION=	17
+JDK_BUILD_NUMBER=	10
 BSD_JDK_VERSION=	1
 
 JDK_BUG_URL=	http://github.com/midnightbsd/mports/
@@ -76,8 +79,7 @@ CONFIGURE_ARGS=	--with-boot-jdk=${BOOTSTRAPJDKDIR} \
 		--disable-ccache \
 		--disable-javac-server \
 		--disable-hotspot-gtest \
-		--with-alsa-lib=${LOCALBASE}/lib/alsa-lib \
-		--with-alsa-include=${LOCALBASE}/include/alsa \
+		--with-alsa=${LOCALBASE} \
 		--with-cups=${LOCALBASE} \
 		--with-fontconfig=${LOCALBASE} \
 		--with-freetype=system \
@@ -89,6 +91,7 @@ CONFIGURE_ARGS=	--with-boot-jdk=${BOOTSTRAPJDKDIR} \
 		--with-giflib-lib=${LOCALBASE}/lib \
 		--with-harfbuzz=system \
 		--with-libpng=system \
+		--with-num-cores=${MAKE_JOBS_NUMBER} \
 		--with-zlib=system \
 		--with-lcms=system \
 		--x-includes=${LOCALBASE}/include \
@@ -111,6 +114,11 @@ ALL_TARGET=		images
 JDK_BUILD_TYPE=		release
 
 .include <bsd.port.pre.mk>
+
+# portsfallout.com shows flapping builds on 13.5 and 14.2
+
+MAKE_JOBS_NUMBER_LIMIT=	3
+
 
 BOOTSTRAP_JDKS=	${LOCALBASE}/openjdk17 ${LOCALBASE}/bootstrap-openjdk17
 
