--- a/databases/Makefile
+++ b/databases/Makefile
@@ -40,6 +40,7 @@
     SUBDIR += libgda5-mysql
     SUBDIR += libgda5-postgresql
     SUBDIR += libgda5-ui
+    SUBDIR += libgda6
     SUBDIR += libiodbc
     SUBDIR += libmemcache
     SUBDIR += libmemcached
