--- a/devel/py-maturin/files/patch-cargo-crates_xwin-0.5.1_Cargo.toml
+++ b/devel/py-maturin/files/patch-cargo-crates_xwin-0.5.1_Cargo.toml
@@ -4,9 +4,9 @@ Dependency chain:
 
 xwin -> native-tls -> openssl-sys -> openssl-src
 
---- cargo-crates/xwin-0.5.0/Cargo.toml.orig	1970-01-01 00:00:01 UTC
-+++ cargo-crates/xwin-0.5.0/Cargo.toml
-@@ -168,7 +168,6 @@ version = "1.12"
+--- cargo-crates/xwin-0.5.1/Cargo.toml.orig	1970-01-01 00:00:01 UTC
++++ cargo-crates/xwin-0.5.1/Cargo.toml
+@@ -168,7 +168,6 @@ native-tls = [
  default = ["rustls-tls"]
  native-tls = [
      "ureq/native-tls",
