--- a/net/libmaxminddb/Makefile
+++ b/net/libmaxminddb/Makefile
@@ -1,19 +1,22 @@
 PORTNAME=	libmaxminddb
-PORTVERSION=	1.5.0
+PORTVERSION=	1.11.0
 CATEGORIES=	net
 MASTER_SITES=	https://github.com/maxmind/libmaxminddb/releases/download/${PORTVERSION}/
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Library for the MaxMind DB file format used for GeoIP2
+WWW=		https://github.com/maxmind/libmaxminddb
 
 LICENSE=	Apache-2.0
 LICENSE_FILE=	${WRKSRC}/LICENSE
 
-USES=		compiler:c11 gmake libtool
+USES=		compiler:c11 cpe gmake libtool
 
-GNU_CONFIGURE=	yes
 CONFIGURE_ARGS=	--with-pkgconfigdir=${PREFIX}/libdata/pkgconfig
+GNU_CONFIGURE=	yes
 INSTALL_TARGET=	install-strip
 USE_LDCONFIG=	yes
+
+CPE_VENDOR=	maxmind
 
 .include <bsd.port.mk>
