www/R-cran-RgoogleMaps: dep

--- a/www/R-cran-RgoogleMaps/Makefile
+++ b/www/R-cran-RgoogleMaps/Makefile
@@ -9,6 +9,7 @@ WWW=		https://cran.r-project.org/web/packages/RgoogleMaps/
 
 LICENSE=	gpl2+
 
+BUILD_DEPENDS=	R-cran-png>0:graphics/R-cran-png
 RUN_DEPENDS=	R-cran-png>0:graphics/R-cran-png
 
 USES=		cran:auto-plist
