--- a/databases/firebird30-server/files/firebird.in
+++ b/databases/firebird30-server/files/firebird.in
@@ -9,9 +9,7 @@
 #
 # firebird_enable:	Set it to "YES" to enable firebird.
 #			Default is "NO".
-# firebird_mode:	Set it to "superclassic" or "superserver" to enable firebird.
-#			Default is "superclassic".
-# firebird_flags:	Set options to run fbserver or fb_smp_server.
+# firebird_flags:	Set options to run firebird.
 # 			Default is "-el /var/db/firebird".
 # firebird_pidfile:	Set full path to pid file.
 #			Default is "/var/run/firebird.pid".
@@ -25,12 +23,11 @@ rcvar=firebird_enable
 load_rc_config $name
 
 firebird_enable=${firebird_enable:-"NO"}
-firebird_mode=${firebird_mode:-"superclassic"}
 firebird_flags=${firebird_flags:-"-el /var/db/firebird"}
 firebird_pidfile=${firebird_pidfile:-"/var/run/${name}.pid"}
 firebird_user=firebird
 
-command=%%PREFIX%%/sbin/fb_smp_server
+command=%%PREFIX%%/sbin/firebird
 command_args="${firebird_flags} &"
 pidfile=${firebird_pidfile}
 start_precmd="start_precmd"
@@ -47,8 +44,7 @@ start_precmd()
 
 start_postcmd()
 {
-	pgrep -u ${firebird_user} ${command_app} > ${firebird_pidfile}
-	echo "Current firebird mode is $firebird_mode"
+	pgrep -u ${firebird_user} ${name} > ${firebird_pidfile}
 }
 
 stop_postcmd()
@@ -61,20 +57,5 @@ reload_postcmd()
         rm -f ${pidfile}
         run_rc_command start
 }
-
-case "${firebird_mode}" in
-        superclassic)
-                command=%%PREFIX%%/sbin/fb_smp_server
-                command_app=fb_smp_server
-                ;;
-        superserver)
-                command=%%PREFIX%%/sbin/fbserver
-                command_app=fbserver
-                ;;
-        *)
-                warn "$firebird_mode is an invalid value for firebird_mode"
-                return 1
-                ;;
-esac
 
 run_rc_command "$1"
