--- a/devel/wizardkit/Makefile
+++ b/devel/wizardkit/Makefile
@@ -1,12 +1,13 @@
 PORTNAME=	wizardkit
 PORTVERSION=	0.1
-PORTREVISION=	4
+PORTREVISION=	5
 CATEGORIES=	devel gnustep
 MASTER_SITES=	http://download.gna.org/pmanager/0.2/
 DISTNAME=	WizardKit-${PORTVERSION}
 
 MAINTAINER=	ports@MidnightBSD.org
 COMMENT=	Framework needed by Project Manager
+WWW=		http://home.gna.org/pmanager/
 
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/COPYING
