--- a/lang/Makefile
+++ b/lang/Makefile
@@ -41,6 +41,7 @@ SUBDIR += go121
 SUBDIR += go122
 SUBDIR += go123
 SUBDIR += go124
+SUBDIR += go125
 SUBDIR += groovy
 SUBDIR += gscheme
 SUBDIR += guile
