devel/R-cran-ellipsis: magus dep

--- a/devel/R-cran-ellipsis/Makefile
+++ b/devel/R-cran-ellipsis/Makefile
@@ -11,6 +11,7 @@ WWW=		https://cran.r-project.org/web/packages/ellipsis/
 LICENSE=	gpl3
 
 CRAN_DEPENDS=	R-cran-rlang>=0.3.0:devel/R-cran-rlang
+BUILD_DEPENDS=	${CRAN_DEPENDS}
 RUN_DEPENDS=	${CRAN_DEPENDS}
 
 USES=		cran:auto-plist,compiles
