devel/R-cran-interp: magus

--- a/devel/R-cran-interp/Makefile
+++ b/devel/R-cran-interp/Makefile
@@ -19,4 +19,6 @@ RUN_DEPENDS=	${CRAN_DEPENDS}
 #USES=		compiler:c++11-lang cran:auto-plist,compiles
 USES=		cran:auto-plist,compiles
 
+NO_TEST=	yes
+
 .include <bsd.port.mk>
