--- a/devel/libclc/Makefile
+++ b/devel/libclc/Makefile
@@ -3,7 +3,6 @@ DISTVERSION=	${DISTVERSION_${FLAVOR}}
 DISTVERSION_llvm19=	19.1.3
 DISTVERSION_llvm18=	18.1.8
 DISTVERSION_llvm17=	17.0.6
-DISTVERSION_llvm16=	16.0.6
 DISTVERSION_llvm15=	15.0.7
 CATEGORIES=	devel
 MASTER_SITES=	https://github.com/llvm/llvm-project/releases/download/llvmorg-${DISTVERSION:S/rc/-rc/}/
@@ -22,7 +21,7 @@ LICENSE_PERMS=	dist-mirror dist-sell pkg-mirror pkg-sell auto-accept
 BUILD_DEPENDS=	spirv-llvm-translator-${FLAVOR}>0:devel/spirv-llvm-translator@${FLAVOR} \
 		libedit>=0:devel/libedit
 
-FLAVORS=	${15 16 17 18 19:L:S/^/llvm/}
+FLAVORS=	${15 17 18 19:L:S/^/llvm/}
 
 USES=		cmake compiler:c++11-lib llvm:${FLAVOR:S/llvm//},build python:build tar:xz
 USE_LDCONFIG=	${PREFIX}/${FLAVOR}/lib
