--- a/www/mattermost-server/Makefile
+++ b/www/mattermost-server/Makefile
@@ -1,6 +1,6 @@
 PORTNAME=	mattermost
-PORTVERSION=	10.5.1
-PORTREVISION=	1
+PORTVERSION=	10.11.8
+PORTREVISION=	0
 CATEGORIES=	www
 MASTER_SITES=	FREEBSD_LOCAL/decke
 PKGNAMESUFFIX=	-server
@@ -12,12 +12,12 @@ WWW=		https://mattermost.org/
 LICENSE=	mit
 LICENSE_FILE=	${WRKSRC}/../LICENSE.txt
 
-ONLY_FOR_ARCHS=	aarch64 amd64 armv6 armv7 i386
+ONLY_FOR_ARCHS=	aarch64 amd64 armv6 armv7
 
 RUN_DEPENDS=	${LOCALBASE}/share/certs/ca-root-nss.crt:security/ca_root_nss \
 		mattermost-webapp>=${PORTVERSION}:www/mattermost-webapp
 
-USES=		go:1.22,modules tar:xz
+USES=		go:modules tar:xz
 USE_RC_SUBR=	mattermostd
 
 GO_TARGET=	./cmd/mattermost ./cmd/mmctl ./scripts/config_generator
