add xalarm, xdaliclock-classic

--- a/x11-clocks/Makefile
+++ b/x11-clocks/Makefile
@@ -1,18 +1,21 @@
-COMMENT = X11 clocks
+    COMMENT = X11 clocks
 
-SUBDIR += aclock
-SUBDIR += asclock
-SUBDIR += asclock-xlib
-SUBDIR += glclock
-SUBDIR += kteatime
-SUBDIR += ktimer
-SUBDIR += oclock
-SUBDIR += wmbinclock
-SUBDIR += wmcalclock
-SUBDIR += xclock
-SUBDIR += xfce4-datetime-plugin
-SUBDIR += xfce4-stopwatch-plugin
-SUBDIR += xfce4-time-out-plugin
-SUBDIR += xfce4-timer-plugin
+    SUBDIR += aclock
+    SUBDIR += asclock
+    SUBDIR += asclock-xlib
+    SUBDIR += glclock
+    SUBDIR += kteatime
+    SUBDIR += ktimer
+    SUBDIR += oclock
+    SUBDIR += wmbinclock
+    SUBDIR += wmcalclock
+    SUBDIR += xalarm
+    SUBDIR += xclock
+    SUBDIR += xdaliclock
+    SUBDIR += xdaliclock-classic
+    SUBDIR += xfce4-datetime-plugin
+    SUBDIR += xfce4-stopwatch-plugin
+    SUBDIR += xfce4-time-out-plugin
+    SUBDIR += xfce4-timer-plugin
 
 .include <bsd.port.subdir.mk>
